# NSU-ROS2

./: README.md
ex01/: readme.md
ex03/src/dmrzlobin_pkg_ex03/: CMakeLists.txt  package.xml
ex04/: colcon_build.txt
ex05/: rosnode_info.txt  rosnode_list.txt
ex08/: rqt_console.csv  three_turtles.launch.py
ex09/: package.xml
ex10/: package.xml  setup.cfg
ex10/cmd_vel_translator/: text_to_cmd_vel.py
lab_1/ex00/: readme.md
lab_1/ex01/: commands.txt
lab_2/ex01/: ex01.txt
lab_2/ex09/: CMakeLists.txt
lab_2/ex10/: setup.py
lab_3/ex01/: package.xml  setup.py
lab_3/ex01/service_full_name/: client_name.py  service_name.py
lab_3/ex02/: pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel.mcap
lab_3/ex03/: doctor.txt
lab_3/ex04/: package.xml  setup.py
lab_3/ex04/move_to_goal/: move_to_goal.py
lab_3/ex05/: CMakeLists.txt  package.xml
lab_3/ex05/action/: CleaningTask.action
lab_3/ex05/src/: cleaning_action_client.cpp  cleaning_action_server.cpp
lab_4/ex01/: last_transform.txt  transform.txt
lab_4/ex02/: package.xml  setup.cfg  setup.py
lab_4/ex02/launch/: turtle_carrot.launch.py
lab_4/ex02/turtle_tf2_lab4_ex02/: turtle2_tf2_broadcaster.py  turtle_tf2_broadcaster.py  turtle_tf2_listener.py
lab_4/ex02b/: CMakeLists.txt  package.xml
lab_4/ex02b/include/turtle_multi_target/: utilities.hpp
lab_4/ex02b/launch/: multi_target.launch.py
lab_4/ex02b/src/: keyboard_listener.cpp  turtle2_tf2_broadcaster.cpp  turtle_controller.cpp  turtle_tf2_broadcaster.cpp
lab_4/ex03/: CMakeLists.txt  package.xml
lab_4/ex03/launch/: time_follower.launch.py
lab_4/ex03/src/: spawn_turtle.cpp  turtle_tf2_broadcaster.cpp  turtle_time_follower.cpp
lab_5/ex01/: package.xml  robot.urdf  setup.py
lab_5/ex01/launch/: robot_display.launch.py
lab_5/ex02/: robot.urdf.xacro  robot_display.launch.py
lab_5/ex03/: package.xml  robot_gazebo.launch.py  setup.py
lab_5/ex03/urdf/: robot.urdf.xacro
lab_5/ex04/: package.xml  setup.py
lab_5/ex04/launch/: circle_movement.launch.py
lab_5/ex04/robot_circle_movement/: circle_movement.py
lab_5/ex04/urdf/: robot.gazebo.xacro
lab_5/ex05/: package.xml  setup.cfg  setup.py
lab_5/ex05/launch/: star_pattern.launch.py
lab_5/ex05/star_pattern/: README.md  star_pattern.py
lab_6/ex04_and_01-03/: CMakeLists.txt  package.xml
lab_6/ex04_and_01-03/config/: lidar_bridge.yaml
lab_6/ex04_and_01-03/launch/: robot_lidar.launch.py
lab_6/ex04_and_01-03/src/: lidar_stop.cpp
lab_6/ex04_and_01-03/urdf/: robot_lidar.gazebo.xacro  robot_lidar.urdf.xacro
lab_6/ex05_and_01-03/: CMakeLists.txt  package.xml
lab_6/ex05_and_01-03/config/: depthcam_bridge.yaml
lab_6/ex05_and_01-03/launch/: robot_depthcam.launch.py
lab_6/ex05_and_01-03/src/: depthcam_stop.cpp
lab_6/ex05_and_01-03/urdf/: robot_depthcam.gazebo.xacro  robot_depthcam.urdf.xacro
